--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 	<head>
 	<meta charset="UTF-8" />
 	<title>FRUIT FROGS</title>
-	<link rel="icon" type="image/png" href="images/favicon.ico" />	
+	<link rel="icon" type="image/png" href="images/favicon.ico" />
+	<style>#canvas{touch-action: none;}</style>
 	</head>
 	<body>
+		<script src = "js/jquery.js"></script>
 		<script src = "js/model.js"></script>
 		<script src = "js/app.js"></script>
 		<script src = "js/controller.js"></script>
